<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GantiPasswordActivity">

    <ImageView
        android:id="@+id/logo_back"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/logo_back"
        android:src="@drawable/ic_tombol_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="132dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/ganti_password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/logo_back"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kolomkonfirmasipasswordbaru"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:hint="@string/konfirmasi_password_baru"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/kolompasswordbaru"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="@string/masukkan_password_baru"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/kolompasswordlama"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/masukkan_password_lama"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/ceklis"
        android:layout_width="58dp"
        android:layout_height="32dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_ceklis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/ceklis" />

</androidx.constraintlayout.widget.ConstraintLayout>