<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersetujuanTugasAkhirActivity">

    <ImageView
        android:id="@+id/arrowBack2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="buttonBackButuhPersetujuan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/imageMahasiswa3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_profile" />

    <TextView
        android:id="@+id/namaMahasiswa3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nama_mahasiswa"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageMahasiswa3"
        app:layout_constraintStart_toStartOf="@+id/imageMahasiswa3"
        app:layout_constraintTop_toBottomOf="@+id/imageMahasiswa3" />

    <TextView
        android:id="@+id/nimMahasiswa3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nim_mahasiswa"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/namaMahasiswa3"
        app:layout_constraintStart_toStartOf="@+id/namaMahasiswa3"
        app:layout_constraintTop_toBottomOf="@+id/namaMahasiswa3" />

    <TextView
        android:id="@+id/rectangleRequest"
        android:layout_width="366dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nimMahasiswa3" />

    <TextView
        android:id="@+id/request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/request"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageRequest"
        app:layout_constraintStart_toEndOf="@+id/imageRequest"
        app:layout_constraintTop_toTopOf="@+id/imageRequest" />

    <ImageView
        android:id="@+id/imageRequest"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/rectangleRequest"
        app:layout_constraintTop_toTopOf="@+id/rectangleRequest"
        app:srcCompat="@drawable/ic_baseline_error_outline_24" />

    <TextView
        android:id="@+id/requestDetail"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/request_detail"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/request"
        app:layout_constraintTop_toBottomOf="@+id/request" />

    <TextView
        android:id="@+id/timeSince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/time_since"
        app:layout_constraintEnd_toEndOf="@+id/rectangleRequest"
        app:layout_constraintTop_toTopOf="@+id/request" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#5DB075"
        android:text="@string/accept"
        android:onClick="buttonsetuju"
        app:layout_constraintEnd_toEndOf="@+id/rectangleRequest"
        app:layout_constraintTop_toBottomOf="@+id/rectangleRequest" />

    <Button
        android:id="@+id/buttonReject"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#BA1A1A"
        android:text="@string/reject"
        android:onClick="buttontolak"
        app:layout_constraintStart_toStartOf="@+id/rectangleRequest"
        app:layout_constraintTop_toTopOf="@+id/buttonAccept" />

</androidx.constraintlayout.widget.ConstraintLayout>