<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputNilaiTugasAkhirActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonInputNilaiTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_shape"
        android:text="@string/input"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNIlaiUjianSidang"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/headerInputNilaiTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="80dp"
        android:text="@string/input_nilai_ta"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrowBack4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputNilaiBimbinganSeminar"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/headerInputNilaiTA"
        app:layout_constraintTop_toBottomOf="@+id/headerInputNilaiTA">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nilai_bimbingan_menuju_seminar_ta"
            android:inputType="number"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputNilaiUjianSeminar"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/inputNilaiBimbinganSeminar"
        app:layout_constraintTop_toBottomOf="@+id/inputNilaiBimbinganSeminar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nilai_ujian_seminar_ta"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputNIlaiBimbinganSidang"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/inputNilaiUjianSeminar"
        app:layout_constraintTop_toBottomOf="@+id/inputNilaiUjianSeminar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nilai_bimbingan_menuju_sidang_ta"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputNIlaiUjianSidang"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/inputNIlaiBimbinganSidang"
        app:layout_constraintTop_toBottomOf="@+id/inputNIlaiBimbinganSidang">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nilai_ujian_sidang_ta"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>