<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButuhPersetujuanActivity">

    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/rectangleMahasiswa2"
        android:layout_width="366dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listMahasiswa" />

    <ImageView
        android:id="@+id/imageMahasiswa2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMahasiswa2"
        app:layout_constraintStart_toStartOf="@+id/rectangleMahasiswa2"
        app:layout_constraintTop_toTopOf="@+id/rectangleMahasiswa2"
        app:srcCompat="@drawable/default_profile" />

    <TextView
        android:id="@+id/namaMahasiswa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nama_mahasiswa"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/imageMahasiswa2"
        app:layout_constraintTop_toTopOf="@+id/imageMahasiswa2" />

    <TextView
        android:id="@+id/nimMahasiswa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim_mahasiswa"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageMahasiswa2"
        app:layout_constraintStart_toStartOf="@+id/namaMahasiswa2" />

    <TextView
        android:id="@+id/listMahasiswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="80dp"
        android:text="@string/list_mahasiswa"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageMahasiswa2"
        app:layout_constraintEnd_toEndOf="@+id/rectangleMahasiswa2"
        app:layout_constraintTop_toTopOf="@+id/imageMahasiswa2"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

</androidx.constraintlayout.widget.ConstraintLayout>